--- a/source/src/main/webapp/css/register.css
+++ b/source/src/main/webapp/css/register.css
@@ -19,12 +19,11 @@ main {
 	flex: 1;
 }
 .title {
-    padding: 0 0 25px 0;
+	padding:10px;
     color:#2f514f;
    	display: flex; 
 	justify-content: center;
 	align-items: center;
-	gap: 16px; /* ロゴとテキストの間のスペース */
   	flex-wrap: nowrap; /* はみ出す場合に折り返さずスクロールするか、スマホ用で調整する */
 }
 .logo {
@@ -34,7 +33,6 @@ main {
 }
 /* ヘッダー&フッター（ユーザー登録画面） */
 .header {
-    height: 100px;
     background-color: #f2acac;
 }
 .footer {
@@ -192,10 +190,6 @@ main {
     text-align: center;
   }
 
-  /*.footer {
-    padding: 8px;
-    font-size: 14px;
-  }*/
   
   .footer {
 	padding: 10px;
@@ -244,5 +238,32 @@ main {
   #errorMessage, #error-area {
     font-size: 13px;
     padding-left:10px;
+  }
+}
+@media screen and (min-width: 401px) and (max-width: 768px) {
+  #register {
+    width: 90%;
+    border-radius: 15px;
+  }
+
+  main {
+    padding: 20vw 5vw;
+  }
+
+  .title,
+  .logo,
+  .name_img {
+    position: static;
+    text-align: center;
+  }
+
+  .logo {
+    width: 20vw;
+    min-width: 40px;
+    max-width: 80px;
+  }
+
+  .name_img {
+    width: 200px;
   }
 }
